[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/ui/battle/ActionButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/ui/battle/ActionBar.gd" type="Script" id=2]

[node name="ActionBar" type="HBoxContainer"]
margin_right = 40.0
margin_bottom = 40.0
alignment = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActionButton1" parent="." instance=ExtResource( 1 )]
margin_top = 4.0
margin_bottom = 36.0

[node name="ActionButton2" parent="." instance=ExtResource( 1 )]
margin_left = 52.0
margin_top = 4.0
margin_right = 100.0
margin_bottom = 36.0

[node name="ActionButton3" parent="." instance=ExtResource( 1 )]
margin_left = 104.0
margin_top = 4.0
margin_right = 152.0
margin_bottom = 36.0

[connection signal="pressed" from="ActionButton1" to="." method="_on_ActionButton1_pressed"]
[connection signal="reset_cooldown" from="ActionButton1" to="." method="_on_ActionButton1_reset_cooldown"]
[connection signal="pressed" from="ActionButton2" to="." method="_on_ActionButton2_pressed"]
[connection signal="reset_cooldown" from="ActionButton2" to="." method="_on_ActionButton2_reset_cooldown"]
[connection signal="pressed" from="ActionButton3" to="." method="_on_ActionButton3_pressed"]
[connection signal="reset_cooldown" from="ActionButton3" to="." method="_on_ActionButton3_reset_cooldown"]
